--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import '../../src/styles/globals.css';
+import '../styles/globals.css';
 import '@fontsource-variable/inter/wght.css';
 import interWoff2 from '@fontsource-variable/inter/files/inter-latin-wght-normal.woff2?url';
 import Header from '../components/Header.astro';
@@ -23,7 +23,7 @@ const { title } = Astro.props;
         <link rel="preload" as="font" type="font/woff2" href={interWoff2} crossorigin />
     </head>
     <body class="antialiased text-white bg-complementary">
-        <div class="flex flex-col min-h-screen px-6 bg-noise sm:px-12">
+        <div class="flex flex-col min-h-screen px-6 bg-noise sm:px-12 bg-gradient-to-b from-complementary via-transparent to-complementary">
             <div class="flex flex-col w-full max-w-5xl mx-auto grow">
                 <Header />
                 <main class="grow"><slot /></main>
